2006-03-14 Erik Sandberg  <mandolaerik@gmail.com>

	* Documentaiton/user/invoking.itely: Add ragged-right to bug report
	guidelines.

2006-03-14  Graham Percival  <gpermus@gmail.com>

	* Documentaiton/user/global.itely: small fix from mailist.

2006-03-14  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py (LATEX_INSPECTION_DOCUMENT): Use the
	file descriptor returned by tempfile.mkstemp() when writing
	to tmpfile and closing it. Solves problem with unlink(tmpfile)
	on mingw.

2006-03-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* po/fi.po: newline bugfix.

2006-03-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/paper.scm (paper-alist): Rounding fixes.

2006-03-13  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ changing-defaults, instrument-notation,
	tutorial: small fixes from mailist, mostly from Mats.  Thanks!

2006-03-13 Heikki Junes  <hjunes@cc.hut.fi>

	* po/fi.po: update.

2006-03-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/bin/add-html-footer.py (mail_address_url): don't add
	mailto: to http:// 

	* python/lilylib.py (print_environment): move ps_page_count to
	lilypond-book.py

2006-03-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/music-glossary.tely (G clef): fix clef alignments.

	* scm/framework-ps.scm (embed-document): new function. Use to
	embed PFA files.

	* ly/engraver-init.ly: init rehearsalMarkAlignSymbol to staff-bar.

2006-03-12  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/instrument-notation.itely (Setting simple
	songs): Added \book{...} around the full example, so the separate
	markups are included in the printed example. 

2006-03-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (get_latex_textwidth): explicitly close
	tmphandle.

	* python/lilylib.py (system): rewrite system() using
	subprocess. Remove >& redirection trickery.

2006-03-11  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ changing-defaults, global, scheme-tutorial,