@@ -1,6 +1,16 @@
+2006-03-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/tie-formatting-problem.cc (set_chord_outline): initialize
+	outline with outer edge of note heads. This prevents infinity
+	problems with tied whole notes.
+
+	* scripts/lilypond-book.py (do_file): use os.popen
+
+	* python/convertrules.py (conv): add rule for Stem #'beamed-*
+
 2006-03-14 Erik Sandberg  <mandolaerik@gmail.com>
 
-	* Documentaiton/user/invoking.itely: Add ragged-right to bug report
+	* Documentation/user/invoking.itely: Add ragged-right to bug report
 	guidelines.
 
 2006-03-14  Graham Percival  <gpermus@gmail.com>
